--- a/Intel.MyDeals/Client/src/app/contract/overLappingDeals/overLapping.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/overLappingDeals/overLapping.component.css
@@ -270,7 +270,7 @@ button.btnYNeedClr {
 }
 
 .centerText {
-    padding-left: 11px !important;
+    text-align: center;
     padding-top: 4px;
     font-weight: bold;
 }
