--- a/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
@@ -287,7 +287,7 @@ button.btnYNeedClr {
 }
 
 .centerText {
-    padding-left: 11px !important;
+    text-align: center;
     padding-top: 4px;
     font-weight: bold;
 }
